--- a/docs/book.toml
+++ b/docs/book.toml
@@ -3,4 +3,10 @@ authors = ["Nur"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Socket IO"
+title = "Web Socket IO"
+
+[output.html]
+default-theme = "ayu"
+git-repository-icon = "fa-github"
+git-repository-url = "https://github.com/nurmohammed840/web-socket-io"
+edit-url-template = "https://github.com/nurmohammed840/web-socket-io/blob/master/docs/{path}"
